# law-batch-sync

./: Cargo.toml  docker-compose.yml
src/: main.rs
src/infrastructure/: boe_client.rs  db.rs  mod.rs  openai_client.rs
src/model/: articulo.rs  mod.rs
